--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js --ignore sessions --ext js,jsx",
+    "start": "nodemon src/app.js --ignore sessions --ext js,jsx",
     "dbr": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
     "db-down": "npx sequelize db:migrate:undo:all; npx sequelize db:drop;"
   },
