--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mysql2": "^2.3.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
@@ -49,5 +50,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
